src/tests/Metalama.Patterns.Caching.AspectTests/InvalidateCacheAttributeTests/Diagnostics/DifferentTypeNotIgnoringThisParameter.t.cs
// Error LAMA5101 on `Invalidate`: `The [InvalidateCache] aspect applied to DifferentTypeNotIgnoringThisParameter.InvalidatingClass.Invalidate() cannot invalidate DifferentTypeNotIgnoringThisParameter.CachingClass.DoAction(): the 'this' parameter cannot be mapped because (a) this is an instance method, (b) the method, class or assembly is not annotated with the [CacheConfiguration( IgnoreThisParameter = true )]] attribute and (c) the type DifferentTypeNotIgnoringThisParameter.InvalidatingClass is not derived from DifferentTypeNotIgnoringThisParameter.CachingClass.`